src/objects/CertificationTracking__c.object
<CustomObject>
    <description>The certifications for each employee.</description>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <description>The date of the certification</description>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <description>The Certification this record belongs to</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>CertificationTrackings</relationshipLabel>
        <relationshipName>CertificationTrackings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>Employee this record belongs to</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>CertificationTrackings</relationshipLabel>
        <relationshipName>CertificationTrackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <description>Test to see if this certification is expired</description>
        <formula>IF (Renewal_Date__c &lt; (Today() + 30), &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Employee__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <defaultValue>Today() + 30</defaultValue>
        <description>The date by which this certification needs to be renewed.</description>
        <inlineHelpText>The date by which this certification needs to be renewed.</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <label>CertificationTracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Certification__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Expired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTID-{0000}</displayFormat>
        <label>CertificationTracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CertificationTrackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cert_Date_Must_Be_Before_Renewal_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Certification_Date__c &gt;  Renewal_Date__c</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>The Certification Date must be before the Renewal Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cert_Date_cannot_be_after_today</fullName>
        <active>true</active>
        <description>The Certification Date cannot be entered in the future.</description>
        <errorConditionFormula>Certification_Date__c &gt; Today()</errorConditionFormula>
        <errorMessage>The Certification Date cannot be in the future (after today).</errorMessage>
    </validationRules>
</CustomObject>